--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:del": "node ./leetcode/deleteNthElementsFromEnd.js",
     "test:norepeat": "node ./CodingPatterns/SlidingWindowPattern/no-repeat-substring.js",
     "test:currying": "node ./javascript-specific/currying.js",
-    "test:threeSum": "node ./CodingPatterns/two-pointers-pattern/threeSum.js"
+    "test:threeSum": "node ./CodingPatterns/two-pointers-pattern/threeSum.js",
+    "test:islands": "node ./2DArray/NumberOfIslands.js",
+    "test:walls": "node ./2DArray/wallsAndGates.js"
   },
   "repository": {
     "type": "git",
