--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "ceiling-of-a-number": "node ./CodingPatterns/modified-binary-search/ceiling-of-a-number.js",
     "min-dff": "node ./CodingPatterns/modified-binary-search/min-diff-element.js",
     "find_max_in_bitonic_array": "node ./CodingPatterns/modified-binary-search/find_max_in_bitonic_array.js",
-    "polyfill_array": "node /Users/maa0027/Desktop/gg/DSA/javascript-specific/polyfill/map.js"
+    "polyfill_array": "node /Users/maa0027/Desktop/gg/DSA/javascript-specific/polyfill/map.js",
+    "heap": "node ./priority-queue/priority-queue.js"
   },
   "repository": {
     "type": "git",
