--- a/javascript-problems/package.json
+++ b/javascript-problems/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
+    "jsdom": "^24.0.0",
     "tsx": "^4.7.3",
     "typescript": "^5.4.5",
     "vitest": "^1.5.2"
